# tauri-app-demo

./: draw.drawio  package.json  pnpm-lock.yaml  todo1.db
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/components/: Greet.vue
